Log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logger-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logger
  template:
    metadata:
      labels:
        app: logger
    spec:
      volumes:
        - name: log-volume
          emptyDir: {}
      containers:
        - name: log-creator-container
          image: jouchef/log-creator:1.10
          volumeMounts:
            - name: log-volume
              mountPath: /app/logs
        - name: log-reader-container
          image: jouchef/log-reader:1.10.1
          volumeMounts:
            - name: log-volume
              mountPath: /app/logs
